--- a/src/matrix/c/Makefile
+++ b/src/matrix/c/Makefile
@@ -33,5 +33,8 @@ $(OBJ_DIR)/%.o : $(SRC_DIR)/%.c
 	@mkdir -p $(OBJ_DIR)
 	$(CC) $(CFLAGS) -c $< -o $@
 
+run: $(TARGET)
+	.\$(TARGET)
+
 clean :
 	rm -rf $(OBJ_DIR) $(TARGET)
